[gd_scene load_steps=4 format=3 uid="uid://bbhcbujvtgbwq"]

[ext_resource type="Script" uid="uid://bnr7pikidbg2t" path="res://satellite.gd" id="1_47pra"]
[ext_resource type="Texture2D" uid="uid://bjaj18ivicld" path="res://gameAssets/satellite_powerup.png" id="2_blaqe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_47pra"]
size = Vector2(44, 14)

[node name="Satellite" type="RigidBody2D" groups=["mobs"]]
gravity_scale = 0.0
script = ExtResource("1_47pra")

[node name="Sprite2D" type="Sprite2D" parent="." groups=["mobs"]]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_blaqe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_47pra")

[node name="LifeTime" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTime" to="." method="_on_life_time_timeout"]
